--- a/adsdk/build.gradle
+++ b/adsdk/build.gradle
@@ -21,10 +21,10 @@ stringfog {
  * versionName.2 ===> Tri-Activity.java
  */
 android {
-    compileSdkVersion 26
+    compileSdkVersion 28
     defaultConfig {
         minSdkVersion 16
-        targetSdkVersion 26
+        targetSdkVersion 28
         versionName "2.10.5"
         consumerProguardFiles 'proguard-rules-adsdk.pro'
     }
@@ -44,22 +44,18 @@ android {
 }
 
 dependencies {
-    implementation 'com.android.support:appcompat-v7:25.2.0'
-    implementation 'com.android.support:percent:25.2.0'
-    implementation('com.facebook.android:audience-network-sdk:5.4.1') {
-        exclude group: 'com.google.android.gms'
-    }
+    implementation 'androidx.percentlayout:percentlayout:1.0.0'
+    implementation('com.facebook.android:audience-network-sdk:5.8.0')
     // MoPub
-    implementation('com.mopub:mopub-sdk:5.5.0@aar') {
+    implementation('com.mopub:mopub-sdk:5.12.0@aar') {
         transitive = true
         exclude module: 'libAvid-mopub' // To exclude AVID
         exclude module: 'moat-mobile-app-kit'
-        exclude group: 'com.android.support'
-        exclude module: 'mopub-sdk-interstitial' // use below com.mopub:mopub-sdk-interstitial:5.4.0-webeye@aar'
+        exclude group: 'androidx.fragment'
+        exclude group: 'androidx.core'
     }
-    implementation 'com.mopub:mopub-sdk-interstitial:5.5.0-webeye@aar'
     // admob
-    implementation 'com.google.android.gms:play-services-ads:15.0.1'
+    implementation 'com.google.android.gms:play-services-ads:18.0.0'
     // stringfog
     implementation 'com.github.megatronking.stringfog:xor:1.0.0'
 }
