--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,7 +35,12 @@ android {
             signingConfig signingConfigs.config
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
+
 repositories {
     maven {
         url rootProject.ext.publishUri
