--- a/adsdk/build.gradle
+++ b/adsdk/build.gradle
@@ -3,9 +3,10 @@ apply plugin: 'com.android.library'
 apply plugin: 'stringfog'
 stringfog {
     // 这是加解密 key，可以自由定义。
-    def random = ["a", "b", "c", "d", "e", "f", "0", "1", "2", "3", "4", "5", "6", "7", "8", "9"]
-    Collections.shuffle(random)
-    key random.join()
+//    def random = ["a", "b", "c", "d", "e", "f", "0", "1", "2", "3", "4", "5", "6", "7", "8", "9"]
+//    Collections.shuffle(random)
+//    key random.join()
+    key "stringfog.sdk-" + android.defaultConfig.versionName
     println "fogkey : " + key
     // 开关
     enable true
@@ -57,7 +58,7 @@ dependencies {
     // admob
     implementation 'com.google.android.gms:play-services-ads:18.0.0'
     // stringfog
-    implementation 'com.github.megatronking.stringfog:xor:1.0.0'
+    implementation 'com.github.megatronking.stringfog:xor:1.1.0'
 }
 
 // 发布aar
