--- a/adsdk/build.gradle
+++ b/adsdk/build.gradle
@@ -6,7 +6,7 @@ stringfog {
 //    def random = ["a", "b", "c", "d", "e", "f", "0", "1", "2", "3", "4", "5", "6", "7", "8", "9"]
 //    Collections.shuffle(random)
 //    key random.join()
-    key "stringfog.sdk-" + android.defaultConfig.versionName
+    key "abmodule-" + getConfigKey()
     println "fogkey : " + key
     // 开关
     enable true
@@ -14,6 +14,11 @@ stringfog {
     implementation 'com.github.megatronking.stringfog.xor.StringFogImpl'
     // 指定需加密的代码包路径，可配置多个，未指定将默认全部加密。
     // fogPackages = ['com.xxx.xxx']
+}
+static def getConfigKey() {
+    def date = new Date()
+    def formattedDate = date.format('yyyyMMdd')
+    return String.valueOf(("admodule-" + formattedDate).hashCode())
 }
 /**
  * 版本号与Activity和Provider之间的对应关系
