--- a/adsdk/encrypt.gradle
+++ b/adsdk/encrypt.gradle
@@ -22,15 +22,29 @@ try {
         repo ->
             repo.maven {
                 r ->
-                    r.url = "https://taugin.gitee.io/werepo"
-            }
-            repo.maven {
-                r ->
                     r.url = "https://repo1.maven.org/maven2/"
             }
             repo.maven {
                 r ->
                     r.url = "http://jcenter.bintray.com/"
+            }
+            repo.maven {
+                r ->
+                    r.url = "https://maven.aliyun.com/repository/public"
+            }
+            repo.maven {
+                r ->
+                    r.url = "https://repo.rdc.aliyun.com/repository/130320-release-ATpVKH/"
+                    r.credentials.username = "CP751G"
+                    r.credentials.password = "TaMWu1x2fG"
+
+            }
+            repo.maven {
+                r ->
+                    r.url = "https://repo.rdc.aliyun.com/repository/130320-snapshot-FOUUZY/"
+                    r.credentials.username = "CP751G"
+                    r.credentials.password = "TaMWu1x2fG"
+
             }
     }
 } catch (Exception e) {
