--- a/app/build.gradle
+++ b/app/build.gradle
@@ -14,6 +14,7 @@ android {
         versionCode 1
         versionName "1.0"
         multiDexEnabled true
+        flavorDimensions "version"
     }
 
     signingConfigs {
@@ -38,6 +39,19 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+    }
+
+    publishNonDefault true //注意，这里的配置是为了去除gradle对library module默认只编译release buildType的限制
+    productFlavors {
+        version1 {
+            dimension "version"
+        }
+        version2 {
+            dimension "version"
+        }
+        version3 {
+            dimension "version"
+        }
     }
 }
 
