--- a/app/src/main/assets/data_config.json
+++ b/app/src/main/assets/data_config.json
@@ -15,7 +15,19 @@
           "sdk": "fb",
           "type": "native",
           "pid": "VID_HD_9_16_39S_APP_INSTALL#YOUR_PLACEMENT_ID",
+          "disable": 1
+        },
+        {
+          "sdk": "mopub",
+          "type": "native",
+          "pid": "11a17b188668469fb0412708c3d16813",
           "disable": 0
+        },
+        {
+          "sdk": "admob",
+          "type": "native",
+          "pid": "ca-app-pub-3940256099942544/2247696110",
+          "disable": 1
         }
       ],
       "maxcount": 100,
