--- a/adsdk/src/version0/AndroidManifest.xml
+++ b/adsdk/src/version0/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application>
         <activity
-            android:name="com.cabes.green.allen.TriActivity"
+            android:name="com.usac.sunny.teech.VitActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
             android:excludeFromRecents="true"
             android:icon="@drawable/had_tr_bg"
