--- a/adsdk/src/version1/AndroidManifest.xml
+++ b/adsdk/src/version1/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application>
         <activity
-            android:name="com.cabes.uasic.migre.VitActivity"
+            android:name="com.dock.uasic.migre.SecActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
             android:excludeFromRecents="true"
             android:icon="@drawable/had_tr_bg"
