--- a/adsdk/build.gradle
+++ b/adsdk/build.gradle
@@ -85,6 +85,9 @@ dependencies {
     implementation 'com.google.android.gms:play-services-ads:18.0.0'
     // stringfog
     implementation 'com.github.megatronking.stringfog:xor:1.1.0'
+    // firebase
+    implementation 'com.google.firebase:firebase-core:17.0.0'
+    implementation 'com.google.firebase:firebase-config:18.0.0'
 }
 
 // 发布aar
