1. 增加全局Complex广告展示

--- a/app/src/main/assets/data_config.json
+++ b/app/src/main/assets/data_config.json
@@ -180,7 +180,7 @@
     },
     {
       "name": "interstitial",
-      "mode": "seq",
+      "mode": "con",
       "pids": [
         {
           "sdk": "admob",
@@ -212,7 +212,7 @@
         {
           "sdk": "spread",
           "type": "interstitial",
-          "disable": 1
+          "disable": 0
         }
       ],
       "maxcount": 100,
