--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,10 @@ dependencies {
     } else {
         implementation 'com.hauyu:adsdk:+'
     }
+//    configurations.all {
+//        resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
+//        resolutionStrategy.cacheDynamicVersionsFor 0, 'seconds'
+//    }
 }
 
 configurations.all {
