1. 修改广告配置

--- a/app/src/main/assets/data_config.json
+++ b/app/src/main/assets/data_config.json
@@ -35,14 +35,14 @@
     },
     {
       "name": "banner_and_native",
-      "mode": "que",
+      "mode": "con",
       "bs": 2,
       "cc": [
         "#FF660000",
         "#4455bb22"
       ],
       "nl": [
-        "head"
+        "tiny"
       ],
       "pids": [
         {
