--- a/adsdk/build.gradle
+++ b/adsdk/build.gradle
@@ -22,7 +22,7 @@ static def getConfigKey() {
     return String.valueOf(("admodule-" + formattedDate).hashCode())
 }
 
-def isSnapshot = true
+def isSnapshot = false
 def baseVersion = '3.0.5'
 android {
     compileSdkVersion 28
