--- a/adsdk/build.gradle
+++ b/adsdk/build.gradle
@@ -22,8 +22,8 @@ static def getConfigKey() {
     return String.valueOf(("admodule-" + formattedDate).hashCode())
 }
 
-def isSnapshot = false
-def baseVersion = '3.0.5'
+def isSnapshot = true
+def baseVersion = '3.0.6'
 android {
     compileSdkVersion 28
     defaultConfig {
