--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,7 @@ allprojects {
         maven { url 'https://maven.aliyun.com/repository/gradle-plugin' }
         maven { url 'https://maven.aliyun.com/repository/public' }
         maven { url 'https://maven.aliyun.com/repository/releases' }
+        maven { url 'https://dl.bintray.com/umsdk/release' }
         google()
         jcenter()
         mavenLocal()
