1. 暂时不用firebase remote config

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,4 +85,4 @@ configurations.all {
     // resolutionStrategy.force 'com.google.firebase:firebase-analytics:15.0.2'
 }
 
-apply plugin: 'com.google.gms.google-services'
+// apply plugin: 'com.google.gms.google-services'
