--- a/app/src/main/assets/data_config.json
+++ b/app/src/main/assets/data_config.json
@@ -324,7 +324,7 @@
     },
     {
       "name": "nt_outer_place",
-      "mode": "con",
+      "mode": "seq",
       "as": 1,
       "nl": [
         "head"
@@ -338,21 +338,26 @@
       ],
       "pids": [
         {
-          "sdk": "fb",
+          "sdk": "mopub",
+          "type": "banner",
+          "pid": "252412d5e9364a05ab77d9396346d73d",
+          "disable": 0
+        },
+        {
+          "sdk": "mopub",
           "type": "native",
-          "pid": "YOUR_PLACEMENT_ID",
-          "cc": [
-            "#FF6600aa",
-            "#4455bb22"
-          ],
+          "pid": "02a2d288d2674ad09f3241d46a44356e",
+          "disable": 0
+        },
+        {
+          "sdk": "admob",
+          "type": "banner",
+          "pid": "ca-app-pub-3940256099942544/6300978111",
           "disable": 0
         },
         {
           "sdk": "admob",
           "type": "native",
-          "nl": [
-            "large"
-          ],
           "pid": "ca-app-pub-3940256099942544/2247696110",
           "disable": 0
         },
@@ -360,6 +365,12 @@
           "sdk": "dfp",
           "type": "native",
           "pid": "/6499/example/native",
+          "disable": 0
+        },
+        {
+          "sdk": "dfp",
+          "type": "banner",
+          "pid": "/6253334/dfp_example_ad",
           "disable": 0
         }
       ],
